manifests/1-vpc/4-routes-private.yaml
---
apiVersion: ec2.aws.crossplane.io/v1alpha1
kind: Route
metadata:
  name: dev-private-route
spec:
  forProvider:
    region: us-west-2
    destinationCIDRBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: dev-nat
    routeTableIdRef:
      name: dev-private
  providerConfigRef:
    name: aws-provider
