manifests/1-vpc/5-routes-public.yaml
---
apiVersion: ec2.aws.crossplane.io/v1alpha1
kind: Route
metadata:
  name: dev-public-route
spec:
  forProvider:
    region: us-west-2
    destinationCIDRBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: dev-igw
    routeTableIdRef:
      name: dev-public
